--- a/src/app/view/questions/question-new/question-new.component.html
+++ b/src/app/view/questions/question-new/question-new.component.html
@@ -5,8 +5,8 @@
       <a routerLink="/question" class="navbar-brand cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand cl-text-bold" href="#">
-        My Questions
+      <a class="cl-text-white navbar-brand cl-text-bold" routerLink="#">
+        questions
       </a>
       <a routerLink="/question/new" class="navbar-brand cl-text-white float-right cl-icon-padding">
         <i class="fas fa-plus"></i>
@@ -14,48 +14,45 @@
     </div>
 
     <div class="row col-sm-8">
-      <a routerLink="/profile" class="navbar-brand d-block d-sm-none cl-text-white">
+      <a routerLink="/question" class="navbar-brand d-block d-sm-none cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand cl-text-bold" href="#">
-        Edit Questions
+      <a class="cl-text-white navbar-brand cl-text-bold" routerLink="#">
+        New Question
       </a>
-      <span (click)="UpdateQuestion()"  class="navbar-brand cl-text-white ml-auto">
+      <span (click)="CreateQuestion()" class="navbar-brand cl-text-white ml-auto">
         <i class="fas fa-check"></i>
       </span>
+
     </div>
   </div>
 </nav>
 
 <div class="row container-fluid">
-
-  <div class="col-sm-4 d-none d-sm-block">
-    <ul class="list-group cl-list-group-borderless cl-text-blue">
+  <div class="col-sm-4 d-none d-sm-block ">
+    <ul class="list-group cl-list-group-borderless">
       <li *ngFor="let item of questions" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
         <a routerLink="/question/{{item._id}}/answer" class="cl-text-blue">{{item.title}}</a>
         <a routerLink="/question/{{item._id}}" class="cl-text-blue"><span class="fas fa-cog"></span></a>
       </li>
     </ul>
   </div>
-
   <div class="col-sm-8">
     <div *ngIf="errorFlag" class="alert alert-danger">
       {{errorMsg}}
     </div>
     <form class="cl-text-padding">
       <div class="form-group">
-        <label for="question-name">Question Title</label>
-        <input [(ngModel)]="question.title" name="question-name" type="text" class="form-control" id="question-name" placeholder="Blogger" required #questionName="ngModel">
+        <label for="question-name">Title</label>
+        <input [(ngModel)]="question.title" name="question-name" type="text" class="form-control" id="question-name" placeholder="Angular component" required #questionName="ngModel">
         <span class="help-block" *ngIf="!questionName.valid && questionName.touched">
           Please enter question title!
         </span>
       </div>
       <div class="form-group">
-        <label for="question-description">Question Detail</label>
-        <textarea [(ngModel)]="question.detail" name="question-description" id="question-description" class="form-control" rows="5"
-                  placeholder="I have a question..."></textarea>
+        <label for="question-description">Detail</label>
+        <textarea [(ngModel)]="question.detail" name="question-description" id="question-description" class="form-control" rows="5" placeholder="Description"></textarea>
       </div>
-      <a class="btn btn-danger  btn-block" (click)="DeleteQuestion()" routerLink="/question">Delete</a>
     </form>
   </div>
 </div>
