--- a/src/app/view/answers/answer-edit/answer-edit.component.html
+++ b/src/app/view/answers/answer-edit/answer-edit.component.html
@@ -29,6 +29,8 @@
           Please enter your answer!
     </span>
   <a class="btn btn-danger  btn-block" (click)="DeleteAnswer()" routerLink="/question/{{qid}}/answer">Delete</a>
+    </form>
+
 </div>
 
 <nav class="navbar fixed-bottom cl-grey-navbar">
