--- a/src/app/view/questions/question-answered/question-answered.component.html
+++ b/src/app/view/questions/question-answered/question-answered.component.html
@@ -1,16 +1,13 @@
 <nav class="navbar fixed-top cl-blue-navbar">
   <div class="container-fluid">
     <div>
-      <a routerLink="/" class="navbar-brand cl-icon-padding cl-text-white">
+      <a routerLink="/main" class="navbar-brand cl-icon-padding cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
       <a class="cl-text-white navbar-brand cl-text-bold" routerLink="">
-        My Questions
+        Questions I have answered
       </a>
     </div>
-    <a routerLink='/question/new' class="navbar-brand cl-text-white">
-      <i class="fas fa-plus"></i>
-    </a>
   </div>
 </nav>
 
