--- a/src/app/view/pages/main-page/main-page.component.html
+++ b/src/app/view/pages/main-page/main-page.component.html
@@ -20,14 +20,14 @@
           Questions and answers
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">My Question</a>
-          <a class="dropdown-item" href="#">My Answer</a>
+          <a class="dropdown-item" href="/question">My Question</a>
+          <a class="dropdown-item" href="/questionAnswered">My Answer</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><span class="fa fa-plus"></span> Post new Question</a>
         </div>
       </li>
       <li class="nav-item" *ngIf="user.flag === 'Teacher'">
-        <a class="nav-link" href="#">My Answers</a>
+        <a class="nav-link" href="/questionAnswered">My Answers</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
