--- a/src/app/view/questions/question-list/question-list.component.html
+++ b/src/app/view/questions/question-list/question-list.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar fixed-top cl-blue-navbar">
   <div class="container-fluid">
     <div>
-      <a routerLink="/" class="navbar-brand cl-icon-padding cl-text-white">
+      <a routerLink="/main" class="navbar-brand cl-icon-padding cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
       <a class="cl-text-white navbar-brand cl-text-bold" routerLink="">
         My Questions
       </a>
     </div>
-    <a routerLink='/question/new' class="navbar-brand cl-text-white">
+    <a *ngIf="checkIfStudent()" routerLink='/question/new' class="navbar-brand cl-text-white">
       <i class="fas fa-plus"></i>
     </a>
   </div>
