--- a/src/app/view/pages/main-page/main-page.component.html
+++ b/src/app/view/pages/main-page/main-page.component.html
@@ -23,7 +23,7 @@
           <a class="dropdown-item" href="/question">My Question</a>
           <a class="dropdown-item" href="/questionAnswered">My Answer</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#"><span class="fa fa-plus"></span> Post new Question</a>
+          <a class="dropdown-item" href="/question/new"><span class="fa fa-plus"></span> Post new Question</a>
         </div>
       </li>
       <li class="nav-item" *ngIf="user.flag === 'Teacher'">
@@ -32,3 +32,12 @@
     </ul>
   </div>
 </nav>
+
+<div class="container">
+  <ul class="list-group cl-list-group-borderless cl-text-blue">
+    <li *ngFor="let item of questions" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
+      <a routerLink="/question/{{item._id}}/answer" class="cl-text-blue">{{item.title}}</a>
+      <a routerLink="/question/{{item._id}}" class="cl-text-blue"><span class="fas fa-cog"></span></a>
+    </li>
+  </ul>
+</div>
