--- a/src/app/view/questions/question-new/question-new.component.html
+++ b/src/app/view/questions/question-new/question-new.component.html
@@ -6,7 +6,7 @@
         <i class="fas fa-angle-left"></i>
       </a>
       <a class="cl-text-white navbar-brand cl-text-bold" routerLink="#">
-        Questions
+        New Question
       </a>
       <a routerLink="/question/new" class="navbar-brand cl-text-white float-right cl-icon-padding">
         <i class="fas fa-plus"></i>
