--- a/src/app/view/questions/question-answered/question-answered.component.html
+++ b/src/app/view/questions/question-answered/question-answered.component.html
@@ -5,7 +5,7 @@
         <i class="fas fa-angle-left"></i>
       </a>
       <a class="cl-text-white navbar-brand cl-text-bold" routerLink="">
-        Questions I have answered
+        My answers
       </a>
     </div>
   </div>
@@ -13,9 +13,8 @@
 
 <div class="container">
   <ul class="list-group cl-list-group-borderless cl-text-blue">
-    <li *ngFor="let item of questions" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
-      <a routerLink="/question/{{item._id}}/page" class="cl-text-blue">{{item.title}}</a>
-      <a routerLink="/question/{{item._id}}" class="cl-text-blue"><span class="fas fa-cog"></span></a>
+    <li *ngFor="let item of answers" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
+      <a routerLink="/question/{{item.questionId}}/answer" class="cl-text-blue">{{item.questionTitle}}</a>
     </li>
   </ul>
 </div>
