--- a/src/app/view/answers/answer-list/answer-list.component.html
+++ b/src/app/view/answers/answer-list/answer-list.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top cl-blue-navbar">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <div>
       <a routerLink="/questionAnswered" class="navbar-brand cl-icon-padding cl-text-white">
@@ -14,8 +14,8 @@
   </div>
 </nav>
 
-<div class="container">
-  <ul class="list-group cl-list-group-borderless cl-text-blue">
+<div class="container cl-container-padding">
+  <ul class="list-group cl-list-group-borderless cl-text-black">
     <li *ngFor="let item of answers" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
       <div [innerHTML]="item.detail"></div>
       <div class="row">
@@ -31,14 +31,14 @@
               <!--&lt;!&ndash;</span>&ndash;&gt;-->
             <!--<a class="btn btn-danger  btn-block" *ngIf="checkFollowed(item.author)" (click)="unFollow(item.author)" routerLink="#">Unfollow</a>-->
           </div>
-          <a  routerLink="/question/{{qid}}/answer/{{item._id}}" class="cl-text-blue"><span class="fas fa-edit"></span></a>
+          <a  routerLink="/question/{{qid}}/answer/{{item._id}}" class="cl-text-black"><span class="fas fa-edit"></span></a>
         <!--</div>-->
       <!--</div>-->
     </li>
   </ul>
 </div>
 
-<nav class="navbar fixed-bottom cl-blue-navbar">
+<nav class="navbar fixed-bottom navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid justify-content-end">
     <a routerLink="/profile" class="navbar-brand cl-text-white cl-icon-padding">
       <span class="fas fa-user"></span>
