--- a/src/app/view/pages/main-page/main-page.component.html
+++ b/src/app/view/pages/main-page/main-page.component.html
@@ -33,11 +33,11 @@
   </div>
 </nav>
 
-<div class="container">
-  <ul class="list-group cl-list-group-borderless cl-text-blue">
+<div class="container cl-container-padding">
+  <ul class="list-group cl-list-group-borderless cl-text-black">
     <li *ngFor="let item of questions" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
-      <a routerLink="/question/{{item._id}}/answer" class="cl-text-blue">{{item.title}}</a>
-      <a routerLink="/question/{{item._id}}" class="cl-text-blue"><span class="fas fa-cog"></span></a>
+      <a routerLink="/question/{{item._id}}/answer" class="cl-text-black">{{item.title}}</a>
+      <a routerLink="/question/{{item._id}}" class="cl-text-black"><span class="fas fa-cog"></span></a>
     </li>
   </ul>
 </div>
