--- a/src/app/view/questions/question-edit/question-edit.component.html
+++ b/src/app/view/questions/question-edit/question-edit.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top cl-blue-navbar">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="row container-fluid">
     <div class="col-sm-4 d-none d-sm-block">
 
@@ -27,13 +27,13 @@
   </div>
 </nav>
 
-<div class="row container-fluid">
+<div class="row container-fluid cl-container-padding">
 
   <div class="col-sm-4 d-none d-sm-block">
-    <ul class="list-group cl-list-group-borderless cl-text-blue">
+    <ul class="list-group cl-list-group-borderless cl-text-black">
       <li *ngFor="let item of questions" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
-        <a routerLink="/question/{{item._id}}/answer" class="cl-text-blue">{{item.title}}</a>
-        <a routerLink="/question/{{item._id}}" class="cl-text-blue"><span class="fas fa-cog"></span></a>
+        <a routerLink="/question/{{item._id}}/answer" class="cl-text-black">{{item.title}}</a>
+        <a routerLink="/question/{{item._id}}" class="cl-text-black"><span class="fas fa-cog"></span></a>
       </li>
     </ul>
   </div>
@@ -44,7 +44,9 @@
     </div>
     <form class="cl-text-padding">
       <div class="form-group">
-        <label for="question-name">Question Title</label>
+        <label for="question-name">
+          <h5>Question Title</h5>
+        </label>
         <input [(ngModel)]="question.title" name="question-name" type="text" class="form-control" id="question-name" placeholder="Blogger" required #questionName="ngModel">
         <span class="help-block" *ngIf="!questionName.valid && questionName.touched">
           Please enter question title!
@@ -60,7 +62,7 @@
   </div>
 </div>
 
-<nav class="navbar fixed-bottom cl-blue-navbar">
+<nav class="navbar fixed-bottom navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid justify-content-end">
     <a routerLink="/profile" class="navbar-brand cl-text-white cl-icon-padding">
       <span class="fas fa-user"></span>
