--- a/src/app/view/questions/question-new/question-new.component.html
+++ b/src/app/view/questions/question-new/question-new.component.html
@@ -1,11 +1,12 @@
-<nav class="navbar fixed-top cl-blue-navbar">
+<!--<nav class="navbar fixed-top cl-blue-navbar">-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="row container-fluid">
     <div class="col-sm-4 d-none d-sm-block">
 
       <a routerLink="/question" class="navbar-brand cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand cl-text-bold" routerLink="#">
+      <a class="cl-text-white navbar-brand" routerLink="#">
         New Question
       </a>
       <a routerLink="/question/new" class="navbar-brand cl-text-white float-right cl-icon-padding">
@@ -17,7 +18,7 @@
       <a routerLink="/question" class="navbar-brand d-block d-sm-none cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand cl-text-bold" routerLink="#">
+      <a class="cl-text-white navbar-brand" routerLink="#">
         New Question
       </a>
       <span (click)="CreateQuestion()" class="navbar-brand cl-text-white ml-auto">
@@ -28,12 +29,13 @@
   </div>
 </nav>
 
-<div class="row container-fluid">
+
+<div class="row container-fluid cl-container-padding">
   <div class="col-sm-4 d-none d-sm-block ">
     <ul class="list-group cl-list-group-borderless">
       <li *ngFor="let item of questions" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
-        <a routerLink="/question/{{item._id}}/answer" class="cl-text-blue">{{item.title}}</a>
-        <a routerLink="/question/{{item._id}}" class="cl-text-blue"><span class="fas fa-cog"></span></a>
+        <a routerLink="/question/{{item._id}}/answer" class="cl-text-black">{{item.title}}</a>
+        <a routerLink="/question/{{item._id}}"><span class="fas fa-cog"></span></a>
       </li>
     </ul>
   </div>
@@ -43,21 +45,26 @@
     </div>
     <form class="cl-text-padding">
       <div class="form-group">
-        <label for="question-name">Title</label>
+        <label for="question-name">
+          <h5>Title</h5>
+        </label>
         <input [(ngModel)]="question.title" name="question-name" type="text" class="form-control" id="question-name" placeholder="Angular component" required #questionName="ngModel">
         <span class="help-block" *ngIf="!questionName.valid && questionName.touched">
           Please enter question title!
         </span>
       </div>
       <div class="form-group">
-        <label for="question-description">Detail</label>
+        <label for="question-description">
+          <h5>Detail</h5>
+        </label>
         <textarea [(ngModel)]="question.detail" name="question-description" id="question-description" class="form-control" rows="5" placeholder="Description"></textarea>
       </div>
     </form>
   </div>
 </div>
 
-<nav class="navbar fixed-bottom cl-blue-navbar">
+<!--<nav class="navbar fixed-bottom cl-blue-navbar">-->
+<nav class="navbar fixed-bottom navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid justify-content-end">
     <a routerLink="/profile" class="navbar-brand cl-text-white cl-icon-padding">
       <span class="fas fa-user"></span>
