--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ nav.fixed-bottom {
 }
 
 span.fa-cog {
-  color: #337ab7;
+  color: #000000;
 }
 
 span.youtube {
@@ -30,7 +30,7 @@ span.youtube {
 
 
 a.list-name {
-  color: #337ab7;
+  color: #000000;
 }
 
 a:hover{
@@ -38,13 +38,10 @@ a:hover{
 }
 
 .cl-container-padding {
-  padding-top: 5%;
+  padding-top: 3%;
   padding-bottom: 10%;
 }
 
-.cl-blue-navbar{
-  background-color: #337ab7;
-}
 
 .cl-text-white{
   color: #fff;
@@ -132,4 +129,11 @@ a:hover{
   height: 100px;
   border-radius: 50%;
 }
+
+.cl-text-padding {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+
 /* You can add global styles to this file, and also import other style files */
