--- a/src/app/view/answers/answer-list/answer-list.component.html
+++ b/src/app/view/answers/answer-list/answer-list.component.html
@@ -15,25 +15,46 @@
 </nav>
 
 <div class="container cl-container-padding">
+  <div class="cl-question-padding">
+    <div class="card cl-full-width">
+      <div class="card-header cl-text-bold">
+        Question
+      </div>
+      <div class="card-body">
+        <h4 class="card-title">{{question.title}}</h4>
+        <!--<h6 class="card-subtitle mb-2 text-muted">Emilia-Romagna Region, Italy</h6>-->
+        <p class="card-text">{{question.detail}}</p>
+      </div>
+    </div>
+  </div>
   <ul class="list-group cl-list-group-borderless cl-text-black">
     <li *ngFor="let item of answers" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
-      <div [innerHTML]="item.detail"></div>
-      <div class="row">
+
+      <div class="card cl-full-width">
+        <div class="card-body">
+          <p class="card-text">{{item.detail}}</p>
+          <a *ngIf="checkAuthor(item.author)" routerLink="/question/{{qid}}/answer/{{item._id}}" class="cl-text-black float-right"><span class="fas fa-edit"></span></a>
+        </div>
+        <div class="card-footer text-right">
+          {{item.author.username}}
+          <i class="fas fa-user-plus" *ngIf="checkNotFollowed(item.author._id)" (click)="follow(item.author)"></i>
+          <i class="fas fa-user-slash" *ngIf="checkFollowed(item.author._id)" (click)="unFollow(item.author._id)"></i>
+        </div>
+      </div>
+
+
+      <!--<div [innerHTML]="item.detail"></div>-->
+      <!--<div class="row">-->
               <!--<span>-->
                 <!--{{item.author.username}}-->
               <!--</span>-->
             <!--&lt;!&ndash;<span *ngIf="checkNotFollowed(item.author)" (click)="follow(item.author)">&ndash;&gt;-->
-                <!--<a class="btn btn-success  btn-block" *ngIf="checkNotFollowed(item.author)" (click)="follow(item.author)" routerLink="#">Follow</a>-->
-
-              <!--&lt;!&ndash;</span>&ndash;&gt;-->
-            <!--&lt;!&ndash;<span *ngIf="checkFollowed(item.author)" (click)="unFollow(item.author)">&ndash;&gt;-->
-                <!--&lt;!&ndash;UnFollow&ndash;&gt;-->
-              <!--&lt;!&ndash;</span>&ndash;&gt;-->
-            <!--<a class="btn btn-danger  btn-block" *ngIf="checkFollowed(item.author)" (click)="unFollow(item.author)" routerLink="#">Unfollow</a>-->
-          </div>
-          <a  routerLink="/question/{{qid}}/answer/{{item._id}}" class="cl-text-black"><span class="fas fa-edit"></span></a>
-        <!--</div>-->
-      <!--</div>-->
+                <!--<span class="btn btn-success  btn-block" *ngIf="checkNotFollowed(item.author._id)" (click)="follow(item.author)">Follow</span>-->
+            <!--<span class="btn btn-danger  btn-block" *ngIf="checkFollowed(item.author._id)" (click)="unFollow(item.author._id)">Unfollow</span>-->
+          <!--</div>-->
+          <!--<a  *ngIf="checkAuthor(item.author)" routerLink="/question/{{qid}}/answer/{{item._id}}" class="cl-text-black"><span class="fas fa-edit"></span></a>-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+      <!--&lt;!&ndash;</div>&ndash;&gt;-->
     </li>
   </ul>
 </div>
