--- a/src/app/view/answers/answer-new/answer-new.component.html
+++ b/src/app/view/answers/answer-new/answer-new.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <div>
-      <a routerLink="/questions/{{qid}}/answer" class="navbar-brand cl-text-black cl-icon-padding">
+      <a routerLink="/question/{{qid}}/answer" class="navbar-brand cl-text-black cl-icon-padding">
         <i class="fas fa-angle-left"></i>
       </a>
       <a class="navbar-brand cl-text-black cl-text-bold cl-text-grey" routerLink="#">
