--- a/src/app/view/pages/main-page/main-page.component.html
+++ b/src/app/view/pages/main-page/main-page.component.html
@@ -37,7 +37,7 @@
   <ul class="list-group cl-list-group-borderless cl-text-black">
     <li *ngFor="let item of questions" class="list-group-item cl-list-item-borderless d-flex justify-content-between">
       <a routerLink="/question/{{item._id}}/answer" class="cl-text-black">{{item.title}}</a>
-      <a routerLink="/question/{{item._id}}" class="cl-text-black"><span class="fas fa-cog"></span></a>
+      <a *ngIf="checkAuthor(item.userId)" routerLink="/question/{{item._id}}" class="cl-text-black"><span class="fas fa-edit"></span></a>
     </li>
   </ul>
 </div>
