--- a/src/app/view/user/my-follow/my-follow.component.html
+++ b/src/app/view/user/my-follow/my-follow.component.html
@@ -16,6 +16,9 @@
       <li class="nav-item" *ngIf="user.flag !== 'Admin'">
         <a class="nav-link" href="/user/follow">My Follow</a>
       </li>
+      <li class="nav-item" *ngIf="user.flag === 'Admin'">
+        <a class="nav-link" href="/admin">Admin</a>
+      </li>
       <li class="nav-item dropdown" *ngIf="user.flag === 'Student'">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Questions and answers
