Fix header link #

--- a/src/app/view/answers/answer-edit/answer-edit.component.html
+++ b/src/app/view/answers/answer-edit/answer-edit.component.html
@@ -4,9 +4,9 @@
       <a routerLink="/question/{{qid}}/answer" class="navbar-brand cl-text-black cl-icon-padding">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="navbar-brand cl-text-black cl-text-bold cl-text-grey" routerLink="#">
+      <div class="navbar-brand cl-text-black cl-text-bold cl-text-grey">
          Edit
-      </a>
+      </div>
     </div>
     <span (click)="UpdateAnswer()" class="navbar-brand cl-text-black float-right cl-icon-padding">
       <i class="fas fa-check"></i>
