--- a/src/app/view/questions/question-answered/question-answered.component.html
+++ b/src/app/view/questions/question-answered/question-answered.component.html
@@ -4,9 +4,9 @@
       <a routerLink="/main" class="navbar-brand cl-icon-padding cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand cl-text-bold" routerLink="">
-        My answers
-      </a>
+      <div class="cl-text-white navbar-brand cl-text-bold">
+        My Answers
+      </div>
     </div>
   </div>
 </nav>
