--- a/src/app/view/questions/question-list/question-list.component.html
+++ b/src/app/view/questions/question-list/question-list.component.html
@@ -4,9 +4,9 @@
       <a routerLink="/main" class="navbar-brand cl-icon-padding cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand cl-text-bold" routerLink="">
+      <div class="cl-text-white navbar-brand cl-text-bold">
         My Questions
-      </a>
+      </div>
     </div>
     <a *ngIf="checkIfStudent()" routerLink='/question/new' class="navbar-brand cl-text-white">
       <i class="fas fa-plus"></i>
