--- a/src/app/view/answers/answer-list/answer-list.component.html
+++ b/src/app/view/answers/answer-list/answer-list.component.html
@@ -4,9 +4,9 @@
       <a routerLink="/main" class="navbar-brand cl-icon-padding cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand cl-text-bold" routerLink="">
-        answers
-      </a>
+      <div class="cl-text-white navbar-brand cl-text-bold">
+        Answers
+      </div>
     </div>
     <a *ngIf="user.flag !== 'Guest'" routerLink='/question/{{qid}}/answer/new' class="navbar-brand cl-text-white">
       <i class="fas fa-plus"></i>
