--- a/src/app/view/questions/question-edit/question-edit.component.html
+++ b/src/app/view/questions/question-edit/question-edit.component.html
@@ -5,9 +5,9 @@
       <a routerLink="/question" class="navbar-brand cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+      <div class="cl-text-white navbar-brand cl-text-bold">
         My Questions
-      </a>
+      </div>
       <a routerLink="/question/new" class="navbar-brand cl-text-white float-right cl-icon-padding">
         <i class="fas fa-plus"></i>
       </a>
@@ -17,9 +17,9 @@
       <a routerLink="/profile" class="navbar-brand d-block d-sm-none cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+      <div class="cl-text-white navbar-brand cl-text-bold">
         Edit Questions
-      </a>
+      </div>
       <span (click)="UpdateQuestion()"  class="navbar-brand cl-text-white ml-auto">
         <i class="fas fa-check"></i>
       </span>
