--- a/src/app/view/questions/question-new/question-new.component.html
+++ b/src/app/view/questions/question-new/question-new.component.html
@@ -6,9 +6,9 @@
       <a routerLink="/question" class="navbar-brand cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand" routerLink="#">
+      <div class="cl-text-white navbar-brand">
         New Question
-      </a>
+      </div>
       <a routerLink="/question/new" class="navbar-brand cl-text-white float-right cl-icon-padding">
         <i class="fas fa-plus"></i>
       </a>
@@ -18,9 +18,9 @@
       <a routerLink="/question" class="navbar-brand d-block d-sm-none cl-text-white">
         <i class="fas fa-angle-left"></i>
       </a>
-      <a class="cl-text-white navbar-brand" routerLink="#">
+      <div class="cl-text-white navbar-brand">
         New Question
-      </a>
+      </div>
       <span (click)="CreateQuestion()" class="navbar-brand cl-text-white ml-auto">
         <i class="fas fa-check"></i>
       </span>
